--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
 DATABASE_URL=postgresql+psycopg2://usuario:password@localhost:5432/music_db
+
+# Spotify API (Get from https://developer.spotify.com/dashboard)
+SPOTIFY_CLIENT_ID=your_spotify_client_id
+SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
+
+# Last.fm API (Get from https://www.last.fm/api/account/create)
+LASTFM_API_KEY=your_lastfm_api_key
+
+# Musixmatch (Lyrics) - Optional (https://developer.musixmatch.com)
+MUSIXMATCH_API_KEY=your_musixmatch_key
