--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+certifi==2025.11.12
 click==8.3.1
 fastapi==0.123.0
 greenlet==3.2.4
 h11==0.16.0
+httpcore==1.0.9
 httptools==0.7.1
+httpx==0.28.1
 idna==3.11
 psycopg2-binary==2.9.11
 pydantic==2.12.5
+pydantic-settings==2.12.0
 pydantic_core==2.41.5
 python-dotenv==1.2.1
 PyYAML==6.0.3
