Implement YouTube integration with comprehensive music video endpoints

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ LASTFM_API_KEY=your_lastfm_api_key
 
 # Musixmatch (Lyrics) - Optional (https://developer.musixmatch.com)
 MUSIXMATCH_API_KEY=your_musixmatch_key
+
+# YouTube Data API v3 (Get from https://console.developers.google.com/)
+YOUTUBE_API_KEY=your_youtube_api_key
