Complete JWT authentication system and finalize Audio2 music API project
- Implemented comprehensive JWT authentication system
- Added user registration, login, and profile management endpoints
- Created security module with password hashing and token management
- Added authentication middleware and protected endpoints
- All music API features now completed: Spotify, Last.fm, YouTube, multiuser auth
- Project ready for production use

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ MUSIXMATCH_API_KEY=your_musixmatch_key
 
 # YouTube Data API v3 (Get from https://console.developers.google.com/)
 YOUTUBE_API_KEY=your_youtube_api_key
+
+# Security
+JWT_SECRET_KEY=your_super_secret_jwt_key_change_in_production
