chore: cleanup env files and health UI

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,11 @@
-DATABASE_URL=postgresql+psycopg2://usuario:password@localhost:5432/music_db
+DATABASE_URL=sqlite:///./audio2.db
 
-# Spotify API (Get from https://developer.spotify.com/dashboard)
-SPOTIFY_CLIENT_ID=your_spotify_client_id
-SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
-
-# Last.fm API (Get from https://www.last.fm/api/account/create)
-LASTFM_API_KEY=your_lastfm_api_key
-
-# Musixmatch (Lyrics) - Optional (https://developer.musixmatch.com)
-MUSIXMATCH_API_KEY=your_musixmatch_key
-
-# YouTube Data API v3 (Get from https://console.developers.google.com/)
-YOUTUBE_API_KEY=your_youtube_api_key
+# API Keys (rellena si usas estos servicios)
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+LASTFM_API_KEY=
+MUSIXMATCH_API_KEY=
+YOUTUBE_API_KEY=
 
 # Security
-JWT_SECRET_KEY=your_super_secret_jwt_key_change_in_production
+JWT_SECRET_KEY=changeme
