feat: streamline youtube caching and playback

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DATABASE_URL=sqlite:///./audio2.db
+# This project is configured for PostgreSQL-only usage.
+DATABASE_URL=postgresql+psycopg2://user:pass@localhost:5432/music_db
 
 # API Keys (rellena si usas estos servicios)
 SPOTIFY_CLIENT_ID=
@@ -6,6 +7,7 @@ SPOTIFY_CLIENT_SECRET=
 LASTFM_API_KEY=
 MUSIXMATCH_API_KEY=
 YOUTUBE_API_KEY=
+YOUTUBE_API_KEY_2=
 
 # Security
 JWT_SECRET_KEY=changeme
