--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,12 @@ pydantic-settings==2.12.0
 pydantic_core==2.41.5
 python-dotenv==1.2.1
 PyYAML==6.0.3
+passlib[bcrypt]==1.7.4
+bcrypt<4
+python-jose==3.3.0
 SQLAlchemy==2.0.44
+alembic==1.13.2
+asyncpg==0.30.0
 sqlmodel==0.0.27
 starlette==0.50.0
 typing-inspection==0.4.2
